# RL-08-Assignment

./: .gitignore  pyproject.toml
rli_08_00-3/: jack_car_problem_v1.ipynb
rli_08_assingment/: Off-Policy MC Control with Weighted Importance Sampling.ipynb  Pig Dice Game (numba) RL Dynamic Programming (Assignment)_v1.ipynb  RLI_BCSAI_C3A_2026 - ASSIGNMENT 0 RLI_08_00 TEAMS.txt  RLI_BCSAI_C3B_2026 - ASSIGNMENT 0 RLI_08_00 TEAMS.txt  jack_car_problem_v0.ipynb
