[project]
name = "rli_08_assingment"
dynamic = ["version"]
requires-python = ">=3.8,<3.14"
dependencies = [
    "ipykernel>=4.6.1,<7",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "black>=22.0.0",
    "pytest>=7.0.0",
]
